PROJECT(tbeditor)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
FIND_PACKAGE(Qt4 REQUIRED)

STRING(TOLOWER ${CMAKE_SOURCE_DIR}/${CMAKE_BUILD_TYPE} OUTPUT_PATH)
SET(EXECUTABLE_OUTPUT_PATH ${OUTPUT_PATH})

SET(QT_USE_QTOPENGL TRUE)

INCLUDE(${QT_USE_FILE})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

INCLUDE_DIRECTORIES(${TBENGINE_INC})
INCLUDE_DIRECTORIES(${BOOST_INC})
INCLUDE_DIRECTORIES(${DEVIL_INC})
INCLUDE_DIRECTORIES(${ZLIB_INC})
INCLUDE_DIRECTORIES(${QUAZIP_INC})
INCLUDE_DIRECTORIES(sources)

ADD_DEFINITIONS(${QT_DEFINITIONS})

LINK_DIRECTORIES(${BOOST_LIB_DIR})

file(GLOB_RECURSE SOURCES sources/*.cpp sources/*.rc)
file(GLOB_RECURSE HEADERS sources/*.h)
file(GLOB_RECURSE FORMS sources/*.ui)
file(GLOB_RECURSE QRESS sources/*.qrc)

# Génération des fichier moc
QT4_WRAP_CPP(MOC ${HEADERS})

# Génération des fichier ui
QT4_WRAP_UI(FORMS_HEADERS ${FORMS})

# Génération des fichier qrc
QT4_ADD_RESOURCES(RESS ${QRESS})

ADD_EXECUTABLE(tbeditor ${SOURCES} ${MOC} ${FORMS_HEADERS} ${RESS})

TARGET_LINK_LIBRARIES(tbeditor ${QT_LIBRARIES} ${TBENGINE_LIB} ${BOOST_LIB} ${DEVIL_LIB} ${QUAZIP_LIB} ${ZLIB_LIB} opengl32 glu32)
