PROJECT(tbeditor)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "Build Type")

set(TBEDITOR_TBENGINE_INC "" CACHE PATH "Include")
set(TBEDITOR_BOOST_INC "" CACHE PATH "Include")
set(TBEDITOR_ZLIB_INC "" CACHE PATH "Include")
set(TBEDITOR_QUAZIP_INC "" CACHE PATH "Include")

set(TBEDITOR_BOOST_LIB_DIR "" CACHE PATH "Lib Dir")

set(TBEDITOR_TBENGINE_LIB "" CACHE FILEPATH "Lib")
set(TBEDITOR_BOOST_LIB "" CACHE FILEPATH "Lib")
set(TBEDITOR_QUAZIP_LIB "" CACHE FILEPATH "Lib")
set(TBEDITOR_ZLIB_LIB "" CACHE FILEPATH "Lib")

# Find includes in corresponding build directories
set(CMAKE_INCLUDE_CURRENT_DIR ON)
# Instruct CMake to run moc automatically when needed.
set(CMAKE_AUTOMOC ON)

# Qt bin must be on PATH var
FIND_PACKAGE(Qt5Core)
FIND_PACKAGE(Qt5Widgets)
FIND_PACKAGE(Qt5Gui)
FIND_PACKAGE(Qt5OpenGL)

# qt5_use_modules(tbeditor Core OpenGL Gui Widgets)

STRING(TOLOWER ${CMAKE_SOURCE_DIR}/${CMAKE_BUILD_TYPE} OUTPUT_PATH)
SET(EXECUTABLE_OUTPUT_PATH ${OUTPUT_PATH})

INCLUDE_DIRECTORIES(${TBEDITOR_TBENGINE_INC})
INCLUDE_DIRECTORIES(${TBEDITOR_BOOST_INC})
INCLUDE_DIRECTORIES(${TBEDITOR_DEVIL_INC})
INCLUDE_DIRECTORIES(${TBEDITOR_ZLIB_INC})
INCLUDE_DIRECTORIES(${TBEDITOR_QUAZIP_INC})
INCLUDE_DIRECTORIES(sources)

LINK_DIRECTORIES(${TBEDITOR_BOOST_LIB_DIR})

file(GLOB_RECURSE SOURCES sources/*.cpp sources/*.rc)
file(GLOB_RECURSE HEADERS sources/*.h)
file(GLOB_RECURSE UI sources/*.ui)
file(GLOB_RECURSE QRC sources/*.qrc)

qt5_wrap_ui(UI_SOURCE ${UI})
qt5_add_resources(QRC_SOURCE ${QRC})

ADD_EXECUTABLE(tbeditor ${SOURCES} ${UI_SOURCE} ${QRC_SOURCE})

TARGET_LINK_LIBRARIES(tbeditor
  Qt5::Widgets
  Qt5::OpenGL
  ${TBEDITOR_TBENGINE_LIB}
  ${TBEDITOR_BOOST_LIB}
  ${TBEDITOR_DEVIL_LIB}
  ${TBEDITOR_QUAZIP_LIB}
  ${TBEDITOR_ZLIB_LIB}
  opengl32
  glu32
)
